# direct-sqlcipher

./: .gitignore  README.md  cabal.sandbox.config  direct-sqlcipher.cabal
test/: Main.hs
